[gd_scene load_steps=5 format=3 uid="uid://bprpu8fe22nhe"]

[ext_resource type="Script" path="res://Assets/Sprites/ferAsouder.gd" id="1_djsn8"]
[ext_resource type="Texture2D" uid="uid://dfdr853dc81db" path="res://icon.svg" id="2_4w18d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n1q0n"]

[sub_resource type="CircleShape2D" id="CircleShape2D_p7t5b"]
radius = 4.12311

[node name="ferAsouder" type="Area2D"]
collision_layer = 16
collision_mask = 16
script = ExtResource("1_djsn8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_n1q0n")

[node name="WeldingArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 16

[node name="WeldingCollision" type="CollisionShape2D" parent="WeldingArea"]
position = Vector2(-10, -10)
shape = SubResource("CircleShape2D_p7t5b")
debug_color = Color(0.741176, 0, 0.462745, 0.419608)

[node name="Icon" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.270588)
scale = Vector2(0.144531, 0.144531)
texture = ExtResource("2_4w18d")

[connection signal="input_event" from="." to="." method="_on_input_event"]
